--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,12 @@
 {
     "name": "preemstudio/laravel-messageable",
     "description": "A package to easily use messaging functionality with Laravel.",
+    "license": "MIT",
     "keywords": [
         "PreemStudio",
         "laravel",
         "laravel-messageable"
     ],
-    "homepage": "https://github.com/preemstudio/laravel-messageable",
-    "license": "MIT",
     "authors": [
         {
             "name": "Brian Faust",
@@ -15,45 +14,12 @@
             "role": "Developer"
         }
     ],
+    "homepage": "https://github.com/preemstudio/laravel-messageable",
     "require": {
         "php": "^8.2",
-        "preemstudio/laravel-jetpack": "^1.0",
-        "illuminate/contracts": "^10.0"
+        "illuminate/contracts": "^10.0",
+        "preemstudio/laravel-jetpack": "^1.0"
     },
-    "autoload": {
-        "psr-4": {
-            "PreemStudio\\Messageable\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
-        "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/pint --config vendor/preemstudio/laravel-jetpack/pint.json"
-    },
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true,
-            "ergebnis/composer-normalize": true
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "PreemStudio\\Messageable\\ServiceProvider"
-            ]
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require-dev": {
         "ergebnis/composer-normalize": "^2.30",
         "laravel/pint": "^1.6",
@@ -67,5 +33,39 @@
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "phpstan/phpstan-phpunit": "^1.3",
         "spatie/laravel-ray": "^1.32"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "PreemStudio\\Messageable\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true,
+            "ergebnis/composer-normalize": true
+        },
+        "sort-packages": true
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "PreemStudio\\Messageable\\ServiceProvider"
+            ]
+        }
+    },
+    "scripts": {
+        "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
+        "analyse": "vendor/bin/phpstan analyse",
+        "format": "vendor/bin/pint --config vendor/preemstudio/laravel-jetpack/pint.json",
+        "test": "vendor/bin/pest",
+        "test-coverage": "vendor/bin/pest --coverage"
     }
 }
