--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -11,6 +11,11 @@ parameters:
 			path: src/Models/Message.php
 
 		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Participant\\>\\:\\:where\\(\\)\\.$#"
+			count: 2
+			path: src/Models/Message.php
+
+		-
 			message: "#^Method BombenProdukt\\\\Messageable\\\\Models\\\\Message\\:\\:creator\\(\\) return type with generic class Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\MorphTo does not specify its types\\: TRelatedModel, TChildModel$#"
 			count: 1
 			path: src/Models/Message.php
@@ -93,6 +98,46 @@ parameters:
 		-
 			message: "#^Cannot call method restore\\(\\) on mixed\\.$#"
 			count: 1
+			path: src/Models/Thread.php
+
+		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Message\\>\\:\\:first\\(\\)\\.$#"
+			count: 2
+			path: src/Models/Thread.php
+
+		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Message\\>\\:\\:latest\\(\\)\\.$#"
+			count: 1
+			path: src/Models/Thread.php
+
+		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Message\\>\\:\\:oldest\\(\\)\\.$#"
+			count: 1
+			path: src/Models/Thread.php
+
+		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Participant\\>\\:\\:count\\(\\)\\.$#"
+			count: 1
+			path: src/Models/Thread.php
+
+		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Participant\\>\\:\\:cursor\\(\\)\\.$#"
+			count: 1
+			path: src/Models/Thread.php
+
+		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Participant\\>\\:\\:firstOrFail\\(\\)\\.$#"
+			count: 1
+			path: src/Models/Thread.php
+
+		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Participant\\>\\:\\:where\\(\\)\\.$#"
+			count: 4
+			path: src/Models/Thread.php
+
+		-
+			message: "#^Dynamic call to static method Illuminate\\\\Database\\\\Eloquent\\\\Relations\\\\HasMany\\<BombenProdukt\\\\Messageable\\\\Models\\\\Participant\\>\\:\\:withTrashed\\(\\)\\.$#"
+			count: 2
 			path: src/Models/Thread.php
 
 		-
